crates/uv/tests/it/snapshots/it__ecosystem__jupyterlab-uv-lock-output.snap
---
source: crates/uv/tests/it/ecosystem.rs
expression: snapshot
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Resolved 215 packages in [TIME]
